# ai-coding-agent

./: README.md  example.env  pyproject.toml
src/ai_change_agent/: __init__.py  cli.py  config.py  logging.py
src/ai_change_agent/models/: __init__.py  enums.py  repository.py  schemas.py  state.py
src/ai_change_agent/repository/: __init__.py  discovery.py
tests/: test_cli.py  test_config.py  test_models.py  test_repository_discovery.py
